# src

./: .gitignore  README.md  generate_frontend.py  main.py  pyproject.toml
app/: __init__.py  application.py  config.py  database.py  dependencies.py  enums.py  models.py  postgres_setup.py  schemas.py  services.py  utils.py  web.py
app/data/: catalog_seed.json
app/routers/: __init__.py  admin.py  auth.py  member.py  public.py
app/templates/: base.html
app/templates/admin/: announcements.html  auditlogs.html  books.html  circulation.html  copies.html  fines.html  members.html  portal.html  reminder_policy.html  reports.html  users.html
app/templates/auth/: login.html  register.html
app/templates/member/: catalog.html  detail.html  loans.html  notifications.html  portal.html  reservations.html
app/templates/public/: catalog.html  detail.html  home.html
frontend/: index.html  package-lock.json  package.json  vite.config.mjs
frontend/admin/announcements-page/: index.html
frontend/admin/auditlogs-page/: index.html
frontend/admin/books-page/: index.html
frontend/admin/circulation-page/: index.html
frontend/admin/copies-page/: index.html
frontend/admin/fines-page/: index.html
frontend/admin/members-page/: index.html
frontend/admin/portal/: index.html
frontend/admin/reminder-policy-page/: index.html
frontend/admin/reports-page/: index.html
frontend/admin/users-page/: index.html
frontend/login/: index.html
frontend/member/: index.html
frontend/portal/: index.html
frontend/register/: index.html
tests/: test_library_system.py
(+9 files in other folders)
